[gd_scene load_steps=15 format=3 uid="uid://nualcpv7subd"]

[ext_resource type="Texture2D" uid="uid://blatmducs31wl" path="res://assets/art/sprites/turret_base_01.png" id="1_0hdrm"]
[ext_resource type="Script" path="res://Scripts/turret.gd" id="1_qr7dg"]
[ext_resource type="Texture2D" uid="uid://fclab8rb3hdy" path="res://assets/art/sprites/turret_01.png" id="2_ssvn1"]
[ext_resource type="AudioStream" uid="uid://d1h7tdg08jbp2" path="res://assets/sound/shoot_sound.wav" id="4_ig2i3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mia22"]
atlas = ExtResource("2_ssvn1")
region = Rect2(0, 6, 20, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_csq31"]
atlas = ExtResource("2_ssvn1")
region = Rect2(84, 6, 20, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_abiid"]
atlas = ExtResource("2_ssvn1")
region = Rect2(21, 6, 20, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwd21"]
atlas = ExtResource("2_ssvn1")
region = Rect2(105, 6, 20, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwsua"]
atlas = ExtResource("2_ssvn1")
region = Rect2(42, 6, 20, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_hg6mf"]
atlas = ExtResource("2_ssvn1")
region = Rect2(126, 6, 20, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_7i68v"]
atlas = ExtResource("2_ssvn1")
region = Rect2(63, 6, 20, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_n1vrc"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_mia22")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_csq31")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_abiid")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_fwd21")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_xwsua")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_hg6mf")
}, {
"duration": 14.0,
"texture": SubResource("AtlasTexture_7i68v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mia22")
}],
"loop": false,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nj0ij"]
radius = 296.0
height = 720.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p5tg8"]
radius = 24.0
height = 96.0

[node name="Turret" type="Node2D"]
script = ExtResource("1_qr7dg")

[node name="TurretRock" type="Sprite2D" parent="."]
texture = ExtResource("1_0hdrm")
offset = Vector2(0.5, 0)

[node name="TurretCannon" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_n1vrc")
frame = 6
frame_progress = 1.0
offset = Vector2(0, -6)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(156, 0)
shape = SubResource("CapsuleShape2D_nj0ij")

[node name="reloadTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="fireTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="TurretShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ig2i3")

[node name="Area2D2" type="Area2D" parent="."]
process_mode = 3
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_p5tg8")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="reloadTimer" to="." method="_on_reload_timer_timeout"]
[connection signal="timeout" from="fireTimer" to="." method="_on_fire_timer_timeout"]
[connection signal="area_entered" from="Area2D2" to="." method="_on_area_2d_2_area_entered"]
[connection signal="area_exited" from="Area2D2" to="." method="_on_area_2d_2_area_exited"]
